<resources>
    <string name="config_export_vcard_type">default</string>
    <string name="config_import_vcard_type">default</string>
    <string name="config_export_file_prefix" />
    <string name="config_export_file_suffix" />
    <string name="config_export_file_extension">vcf</string>
    <string name="config_export_extensions_to_consider" />
    <string name="toast_text_copied">Text copied</string>
    <string name="call_custom">Call %s</string>
    <string name="call_home">Call home</string>
    <string name="call_mobile">Call mobile</string>
    <string name="call_work">Call work</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_pager">Call pager</string>
    <string name="call_other">Call</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_main">Call main</string>
    <string name="call_other_fax">Call fax</string>
    <string name="call_radio">Call radio</string>
    <string name="call_telex">Call telex</string>
    <string name="call_tty_tdd">Call TTY/TDD</string>
    <string name="call_work_mobile">Call work mobile</string>
    <string name="call_work_pager">Call work pager</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_mms">Call MMS</string>
    <string name="sms_custom">Text %s</string>
    <string name="sms_home">Text home</string>
    <string name="sms_mobile">Text mobile</string>
    <string name="sms_work">Text work</string>
    <string name="sms_fax_work">Text work fax</string>
    <string name="sms_fax_home">Text home fax</string>
    <string name="sms_pager">Text pager</string>
    <string name="sms_other">Text</string>
    <string name="sms_callback">Text callback</string>
    <string name="sms_car">Text car</string>
    <string name="sms_company_main">Text company main</string>
    <string name="sms_isdn">Text ISDN</string>
    <string name="sms_main">Text main</string>
    <string name="sms_other_fax">Text fax</string>
    <string name="sms_radio">Text radio</string>
    <string name="sms_telex">Text telex</string>
    <string name="sms_tty_tdd">Text TTY/TDD</string>
    <string name="sms_work_mobile">Text work mobile</string>
    <string name="sms_work_pager">Text work pager</string>
    <string name="sms_assistant">Text %s</string>
    <string name="sms_mms">Text MMS</string>
    <string name="clearFrequentsConfirmation_title">Clear frequently contacted?</string>
    <string name="clearFrequentsConfirmation">"You'll clear the frequently contacted list in the People and Phone apps, and force email apps to learn your addressing preferences from scratch."</string>
    <string name="clearFrequentsProgress_title">Clearing frequently contacted…</string>
    <string name="status_available">Available</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string name="contactsList">Contacts</string>
    <string name="local_invisible_directory">Other</string>
    <string name="directory_search_label">Directory</string>
    <string name="local_search_label">All contacts</string>
    <string name="user_profile_contacts_list_header">Me</string>
    <string name="search_results_searching">Searching…</string>
    <string name="foundTooManyContacts">More than %d found.</string>
    <string name="listFoundAllContactsZero">No contacts</string>
    <string name="description_quick_contact_for">Quick contact for %1$s</string>
    <string name="missing_name">(No name)</string>
    <string name="favoritesFrequentCalled">Frequently called</string>
    <string name="favoritesFrequentContacted">Frequently contacted</string>
    <string name="description_view_contact_detail">View contact</string>
    <string name="list_filter_phones">All contacts with phone numbers</string>
    <string name="view_updates_from_group">View updates</string>
    <string name="account_phone">Phone-only, unsynced</string>
    <string name="nameLabelsGroup">Name</string>
    <string name="nicknameLabelsGroup">Nickname</string>
    <string name="full_name">Name</string>
    <string name="name_given">Given name</string>
    <string name="name_family">Family name</string>
    <string name="name_prefix">Name prefix</string>
    <string name="name_middle">Middle name</string>
    <string name="name_suffix">Name suffix</string>
    <string name="name_phonetic">Phonetic name</string>
    <string name="name_phonetic_given">Phonetic given name</string>
    <string name="name_phonetic_middle">Phonetic middle name</string>
    <string name="name_phonetic_family">Phonetic family name</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="postalLabelsGroup">Address</string>
    <string name="imLabelsGroup">IM</string>
    <string name="organizationLabelsGroup">Organization</string>
    <string name="relationLabelsGroup">Relationship</string>
    <string name="eventLabelsGroup">Events</string>
    <string name="sms">Text message</string>
    <string name="postal_address">Address</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="websiteLabelsGroup">Website</string>
    <string name="groupsLabel">Groups</string>
    <string name="email_home">Email home</string>
    <string name="email_mobile">Email mobile</string>
    <string name="email_work">Email work</string>
    <string name="email_other">Email</string>
    <string name="email_custom">Email %s</string>
    <string name="email">Email</string>
    <string name="postal_street">Street</string>
    <string name="postal_pobox">PO box</string>
    <string name="postal_neighborhood">Neighborhood</string>
    <string name="postal_city">City</string>
    <string name="postal_region">State</string>
    <string name="postal_postcode">ZIP code</string>
    <string name="postal_country">Country</string>
    <string name="map_home">View home address</string>
    <string name="map_work">View work address</string>
    <string name="map_other">View address</string>
    <string name="map_custom">View %s address</string>
    <string name="chat_aim">Chat using AIM</string>
    <string name="chat_msn">Chat using Windows Live</string>
    <string name="chat_yahoo">Chat using Yahoo</string>
    <string name="chat_skype">Chat using Skype</string>
    <string name="chat_qq">Chat using QQ</string>
    <string name="chat_gtalk">Chat using Google Talk</string>
    <string name="chat_icq">Chat using ICQ</string>
    <string name="chat_jabber">Chat using Jabber</string>
    <string name="chat">Chat</string>
    <string name="description_minus_button">delete</string>
    <string name="expand_collapse_name_fields_description">Expand or collapse name fields</string>
    <string name="list_filter_all_accounts">All contacts</string>
    <string name="list_filter_all_starred">Starred</string>
    <string name="list_filter_customize">Customize</string>
    <string name="list_filter_single">Contact</string>
    <string name="display_ungrouped">All other contacts</string>
    <string name="display_all_contacts">All contacts</string>
    <string name="menu_sync_remove">Remove sync group</string>
    <string name="dialog_sync_add">Add sync group</string>
    <string name="display_more_groups">More groups…</string>
    <string name="display_warn_remove_ungrouped">Removing \"%s\" from sync will also remove any ungrouped contacts from sync.</string>
    <string name="savingDisplayGroups">Saving display options…</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="listAllContactsInAccount">Contacts in %s</string>
    <string name="listCustomView">Contacts in custom view</string>
    <string name="listSingleContact">Single contact</string>
    <string name="dialog_new_contact_account">Create contact under account</string>
    <string name="import_from_sim">Import from SIM card</string>
    <string name="import_from_sdcard">Import from storage</string>
    <string name="cancel_import_confirmation_message">Cancel import of %s?</string>
    <string name="cancel_export_confirmation_message">Cancel export of %s?</string>
    <string name="cancel_vcard_import_or_export_failed">"Couldn't cancel vCard import/export"</string>
    <string name="fail_reason_unknown">Unknown error.</string>
    <string name="fail_reason_could_not_open_file" formatted="false">"Couldn't open \"%s\": %s."</string>
    <string name="fail_reason_could_not_initialize_exporter">"Couldn't start the exporter: \"%s\"."</string>
    <string name="fail_reason_no_exportable_contact">There is no exportable contact.</string>
    <string name="fail_reason_error_occurred_during_export">An error occurred during export: \"%s\".</string>
    <string name="fail_reason_too_long_filename">Required filename is too long (\"%s\").</string>
    <string name="fail_reason_too_many_vcard">Too many vCard files are on the SD card.</string>
    <string name="fail_reason_io_error">I/O error</string>
    <string name="fail_reason_low_memory_during_import">Not enough memory. The file may be too large.</string>
    <string name="fail_reason_vcard_parse_error">"Couldn't parse vCard for an unexpected reason."</string>
    <string name="fail_reason_not_supported">"The format isn't supported."</string>
    <string name="fail_reason_failed_to_collect_vcard_meta_info">"Couldn't collect meta information of given vCard file(s)."</string>
    <string name="fail_reason_failed_to_read_files">"One or more files couldn't be imported (%s)."</string>
    <string name="exporting_vcard_finished_title">Finished exporting %s.</string>
    <string name="exporting_vcard_canceled_title">Exporting %s canceled.</string>
    <string name="share_visible_contacts">Share visible contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/export</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="group_name_hint">"Group's name"</string>
    <string name="menu_export_database">Export database files</string>
    <string name="menu_option_deleteContacts">Delete contacts</string>
    <string name="menu_option_deleteGroups">Delete groups</string>
    <string name="group_name_header">Name</string>
    <string name="group_members_header">Members</string>
    <string name="join_same_name">Join same-name</string>
    <string name="same_name_join_hint"><li>Click start to join contacts with same display name.</li>"
"<li>Click cancel to stop aggregation in process.</li>"
"<li>The process takes time, please be patient.</li></string>
    <string name="join_action_start">Start</string>
    <string name="join_title_total">Total</string>
    <string name="join_title_single">Current</string>
    <string name="delete_duplicates">Delete duplicates</string>
    <string name="menu_sendViaSMS">Send contact via SMS</string>
</resources>