<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/account_header" layout="@layout/editor_account_header" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
        <TextView android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_name_header" style="@style/ContactListSeparatorTextViewStyle" />
        <EditText android:textAppearance="?android:textAppearanceMedium" android:id="@id/group_name" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:hint="@string/group_name_hint" android:inputType="textCapWords" android:imeOptions="flagNoFullscreen|flagNoExtractUi" android:paddingStart="8.0dip" />
        <include android:id="@id/group_ringtone_editor" layout="@layout/group_ringtone_editor_view" />
        <TextView android:id="@id/editor_members_header" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_members_header" style="@style/ContactListSeparatorTextViewStyle" />
        <include android:id="@id/add_member_field" layout="@layout/group_editor_autocomplete_view" />
        <include android:id="@android:id/list" layout="@layout/group_editor_existing_member_list" />
    </LinearLayout>
</LinearLayout>