<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/hints" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:gravity="center" android:id="@id/total_status" android:layout_width="fill_parent" android:layout_height="72.0dip" android:maxLines="2" />
        <View android:background="#55555555" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0dip" android:layout_marginBottom="3.0dip" />
        <TextView android:id="@id/title_check" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/join_title_total" style="@style/SameNameTitleStyle" />
        <View android:background="@android:color/holo_blue_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="3.0dip" android:layout_marginBottom="8.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/join_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/status_unstarted" android:layout_weight="0.0" />
            <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:gravity="left|center" android:id="@id/join_status" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="6.0dip" android:maxLines="2" android:layout_weight="1.0" />
        </LinearLayout>
        <ProgressBar android:id="@id/progress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="false" style="?android:attr/progressBarStyleHorizontal" />
        <View android:background="#55555555" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="8.0dip" android:layout_marginBottom="3.0dip" />
        <TextView android:id="@id/title_join" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/join_title_single" style="@style/SameNameTitleStyle" />
        <View android:background="@android:color/holo_blue_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="3.0dip" android:layout_marginBottom="8.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/check_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/status_unstarted" android:layout_weight="0.0" />
            <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:gravity="left|center" android:id="@id/check_status" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="6.0dip" android:maxLines="2" android:layout_weight="1.0" />
        </LinearLayout>
        <ProgressBar android:id="@id/progress_single" android:layout_width="fill_parent" android:layout_height="wrap_content" android:indeterminate="true" style="?android:attr/progressBarStyleHorizontal" />
        <View android:background="#55555555" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="8.0dip" android:layout_marginBottom="3.0dip" />
        <TextView android:textAppearance="@android:style/TextAppearance.Small" android:textColor="#aa000000" android:id="@id/help_hint" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/same_name_join_hint" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/actions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <View android:background="#55555555" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="3.0dip" android:layout_marginBottom="3.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/buttonBarStyle">
            <Button android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="4.0dip" android:text="@android:string/cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
            <Button android:id="@id/btn_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="6.0dip" android:text="@string/join_action_start" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>